# TFG

./: .gitignore  .pre-commit-config.yaml  Readme.md  application.py  config.yaml  database_readme.md  glucosebot.py  pyproject.toml  requirements.txt
config/: config.py
database/: database_class.py
lib/cli/: parser.py
src/: glucose.py  main.py
test/: glucose_test.py
tests/: database_test.py  glucose_test.py
tests/database/: database_test.py
tests/glucose/: glucose_test.py
tests/glucosebot/: glucosebot_test.py
utils/: additional_funcions.py
web/: app.py
web/templates/: login.html  profile.html  register.html
