[tool.poetry]
name = "tfg"
version = "0.1.0"
description = ""
authors = ["pedrooot <pedromarting3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
schedule = "^1.2.1"
pyyaml = "^6.0.1"
colorama = "^0.4.6"
timedelta = "^2020.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
